--- a/01.Guitar/index.html
+++ b/01.Guitar/index.html
@@ -14,28 +14,28 @@
   <body>
     <div class="keys">
       <div data-key="a" class="key">
-        <kbd>A</kbd>
-        <span class="sound">string E</span>
+        <kbd>E</kbd>
+        <span class="sound">key A</span>
       </div>
       <div data-key="s" class="key">
-        <kbd>S</kbd>
-        <span class="sound">string A</span>
+        <kbd>A</kbd>
+        <span class="sound">key s</span>
       </div>
       <div data-key="d" class="key">
         <kbd>D</kbd>
-        <span class="sound">string D</span>
+        <span class="sound">key d</span>
       </div>
       <div data-key="f" class="key">
-        <kbd>F</kbd>
-        <span class="sound">string G</span>
+        <kbd>G</kbd>
+        <span class="sound">key f</span>
       </div>
       <div data-key="g" class="key">
-        <kbd>G</kbd>
-        <span class="sound"string>string B</span>
+        <kbd>B</kbd>
+        <span class="sound"string>key g</span>
       </div>
       <div data-key="h" class="key">
-        <kbd>H</kbd>
-        <span class="sound">string e</span>
+        <kbd>E</kbd>
+        <span class="sound">key h</span>
       </div>
     </div>
 
