--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <h1>Javascript #30 challenge</h1>
     <a href="/01.Guitar/index.html">Day 1: JavaScript Guitar player</a>
+    <a href="/02. CSS & JS clock/">Day 2: CSS & JS clock</a>
   </body>
 </html>
